--- a/config.example
+++ b/config.example
@@ -5,5 +5,7 @@ MYNUM="+19999999999"
 NUM[joe]="+19999999991"
 NUM[jane]="+19999999992"
 
+GRP[group1]="base64-encoded-group-id"
+
 # Logfile
 LOG=~/.local/share/signal-cli/data/${MYNUM}.d/msgs
